--- a/content/shopassistant/about.html
+++ b/content/shopassistant/about.html
@@ -57,36 +57,40 @@
                   <div class="logo">
                     <a
                       id="logo"
-                      href="../../index-shopassistant.html"
+                      href="index-shopassistant.html"
                       title="ShopAssistant - Betheme"
                       data-height="60"
                       data-padding="15"
-                      ><img
+                    >
+                      <img
                         class="logo-main scale-with-grid svg"
-                        src="images/shopassistant.svg"
-                        data-retina=""
+                        src="images/logo3.png"
                         data-height=""
                         alt="shopassistant"
-                        width="209" /><img
+                        width="169"
+                      />
+                      <img
                         class="logo-sticky scale-with-grid svg"
-                        src="images/shopassistant.svg"
-                        data-retina=""
+                        src="images/logo3.png"
                         data-height=""
                         alt="shopassistant"
-                        width="209" /><img
+                        width="169"
+                      />
+                      <img
                         class="logo-mobile scale-with-grid svg"
-                        src="images/shopassistant.svg"
-                        data-retina=""
+                        src="images/logo3.png"
                         data-height=""
                         alt="shopassistant"
-                        width="209" /><img
+                        width="169"
+                      />
+                      <img
                         class="logo-mobile-sticky scale-with-grid svg"
-                        src="images/shopassistant.svg"
-                        data-retina=""
+                        src="images/logo3.png"
                         data-height=""
                         alt="shopassistant"
-                        width="209"
-                    /></a>
+                        width="169"
+                      />
+                    </a>
                   </div>
                   <div class="menu_wrapper">
                     <nav id="menu">
@@ -218,7 +222,10 @@
             </div>
           </div>
         </div>
-        <div class="section no-margin-h" style="padding-bottom: 150px;padding-top: 150px;">
+        <div
+          class="section no-margin-h"
+          style="padding-bottom: 150px; padding-top: 150px"
+        >
           <div class="container">
             <div
               class="wrap column-margin-0px valign-top move-up clearfix"
@@ -235,8 +242,7 @@
                     <div
                       class="google_font"
                       style="
-                        font-family: '', Arial, Tahoma,
-                          sans-serif;
+                        font-family: '', Arial, Tahoma, sans-serif;
                         font-size: 60px;
                         line-height: 60px;
                         font-weight: 600;
@@ -260,8 +266,7 @@
                     <div
                       class="google_font"
                       style="
-                        font-family: '', Arial, Tahoma,
-                          sans-serif;
+                        font-family: '', Arial, Tahoma, sans-serif;
                         font-size: 60px;
                         line-height: 60px;
                         font-weight: 600;
@@ -285,8 +290,7 @@
                     <div
                       class="google_font"
                       style="
-                        font-family: '', Arial, Tahoma,
-                          sans-serif;
+                        font-family: '', Arial, Tahoma, sans-serif;
                         font-size: 60px;
                         line-height: 60px;
                         font-weight: 600;
@@ -310,8 +314,7 @@
                     <div
                       class="google_font"
                       style="
-                        font-family: '', Arial, Tahoma,
-                          sans-serif;
+                        font-family: '', Arial, Tahoma, sans-serif;
                         font-size: 60px;
                         line-height: 60px;
                         font-weight: 600;
@@ -337,15 +340,13 @@
               <div class="col-md-4 flex-center" data-col="one-third">
                 <div class="text-center">
                   <p>
-                    <span class="shopassistant-heading bepurple"
-                      >覆盖多国</span
-                    >
+                    <span class="shopassistant-heading bepurple">覆盖多国</span>
                   </p>
                   <p class="text-alight-lift text-indent-2">
-                    我们积极布局海外，业务覆盖多个国家，<br/>
-                    通过设立新加坡、法国海外分公司、自建累<br/>
-                    计**万平方米自营大型仓库、建立专业化的<br/>
-                    本地化运营团队及全渠道销售的模式，已成<br/>
+                    我们积极布局海外，业务覆盖多个国家，<br />
+                    通过设立新加坡、法国海外分公司、自建累<br />
+                    计**万平方米自营大型仓库、建立专业化的<br />
+                    本地化运营团队及全渠道销售的模式，已成<br />
                     功将产品销往全球10多个国家。
                   </p>
                 </div>
@@ -368,16 +369,14 @@
               <div class="col-md-4 flex-center" data-col="one-third">
                 <div class="text-center">
                   <p>
-                    <span class="shopassistant-heading bepurple"
-                      >自主品牌</span
-                    >
+                    <span class="shopassistant-heading bepurple">自主品牌</span>
                   </p>
                   <p class="text-alight-lift text-indent-2">
-                    我们公司旗下拥有主营品牌--ISIYINER，<br/>
-                    同时还运营着其他多个品牌，每个品牌都拥有<br/>
-                    独特的风格和市场定位，远销欧洲、东南亚等<br/>
-                    多个国家和地区，在Amazon、shopee、阿里<br/>
-                    巴巴等国际电商平台，在全球范围建立了良好<br/>
+                    我们公司旗下拥有主营品牌--ISIYINER，<br />
+                    同时还运营着其他多个品牌，每个品牌都拥有<br />
+                    独特的风格和市场定位，远销欧洲、东南亚等<br />
+                    多个国家和地区，在Amazon、shopee、阿里<br />
+                    巴巴等国际电商平台，在全球范围建立了良好<br />
                     的口碑，好评率高达99%。
                   </p>
                 </div>
@@ -405,11 +404,11 @@
                     >
                   </p>
                   <p class="text-alight-lift text-indent-2">
-                    我们的销售团队由超过**名专业销售<br/>
-                    组成，其中 ** % 为海外本地员工，团队<br/>
-                    成员经验丰富，精通当地商业环境和市场<br/>
-                    需求，能够与当地客户和合作伙伴有效沟<br/>
-                    通合作，满足不同国家和地区消费者的需<br/>求。
+                    我们的销售团队由超过**名专业销售<br />
+                    组成，其中 ** % 为海外本地员工，团队<br />
+                    成员经验丰富，精通当地商业环境和市场<br />
+                    需求，能够与当地客户和合作伙伴有效沟<br />
+                    通合作，满足不同国家和地区消费者的需<br />求。
                   </p>
                 </div>
                 <hr class="no_line" style="margin: 0 auto 20px auto" />
@@ -482,45 +481,61 @@
             </div>
           </div>
         </div>
-        <div class="section mcb-section" style="
+        <div
+          class="section mcb-section"
+          style="
             padding-top: 100px;
             padding-bottom: 60px;
             background-color: #ffcf00;
-          " data-parallax="3d">
-        <img class="mfn-parallax" src="images/shopassistant-section-bg4.svg"
-          alt="parallax background" style="opacity: 0" />
-        <div class="section-decoration top" style="
+          "
+          data-parallax="3d"
+        >
+          <img
+            class="mfn-parallax"
+            src="images/shopassistant-section-bg4.svg"
+            alt="parallax background"
+            style="opacity: 0"
+          />
+          <div
+            class="section-decoration top"
+            style="
               background-image: url(images/shopassistant-section-pic1.webp);
               height: 35px;
-            "></div>
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6" data-col="one-second">
-              <div class="row">
-                <div class="col-md-12">
-                  <div class="column_attr clearfix mobile_align_center">
-                    <img class="scale-with-grid" src="images/shopassistant-sep3.svg" />
-                    <hr class="no_line" style="margin: 0 auto 10px auto" />
-                    <h2 class="bottom-h2">
-                      您的首选
-                      <br />
-                      跨境合作伙伴
-                    </h2>
-                    <img class="scale-with-grid cutting-line"
-                      src="images/shopassistant-sep6.svg" />
-                    <hr class="no_line" style="margin: 0 auto 10px auto" />
-                    <p class="bottom-text">
-                      <span style="color: #12263a">
-                        无论您是需求咨询，还是寻求合作，
+            "
+          ></div>
+          <div class="container">
+            <div class="row">
+              <div class="col-md-6" data-col="one-second">
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="column_attr clearfix mobile_align_center">
+                      <img
+                        class="scale-with-grid"
+                        src="images/shopassistant-sep3.svg"
+                      />
+                      <hr class="no_line" style="margin: 0 auto 10px auto" />
+                      <h2 class="bottom-h2">
+                        您的首选
                         <br />
-                        欢迎随时与我们联系,
-                        <br />
-                        期待与您的携手共赢。
-                      </span>
-                    </p>
+                        跨境合作伙伴
+                      </h2>
+                      <img
+                        class="scale-with-grid cutting-line"
+                        src="images/shopassistant-sep6.svg"
+                      />
+                      <hr class="no_line" style="margin: 0 auto 10px auto" />
+                      <p class="bottom-text">
+                        <span style="color: #12263a">
+                          无论您是需求咨询，还是寻求合作，
+                          <br />
+                          欢迎随时与我们联系,
+                          <br />
+                          期待与您的携手共赢。
+                        </span>
+                      </p>
+                    </div>
                   </div>
-                </div>
-                <!-- <div class="col-md-10">
+                  <!-- <div class="col-md-10">
                   <div class="column_attr clearfix" style="
                         background-color: #ffd830;
                         background-image: url('images/shopassistant-wrap-bg7.png');
@@ -543,47 +558,33 @@
                     </p>
                   </div>
                 </div> -->
+                </div>
               </div>
-            </div>
-            <div class="col-md-6" data-col="one-second" style="
+              <div
+                class="col-md-6"
+                data-col="one-second"
+                style="
                   padding: 50px 70px;
                   background-color: #fff;
                   border-radius: 32px;
-                ">
-              <h4>
-                XXXX联系方式
-              </h4>
-              <div id="contactWrapper">
-                <div id="contactform">
-                  <form method="post" id="reused_form">
-                    <div class="column one-second">
-                      邮箱：
-                    </div>
-                    <div class="column one-second">
-                      shopeefy36@gmail.com
-                    </div>
-                    <div class="column one-second">
-                      电话：
-                    </div>
-                    <div class="column one-second">
-                      +86 07906863655
-                    </div>
-                    <div class="column one-second">
-                      工作时间：
-                    </div>
-                    <div class="column one-second">
-                      XXXXXXX
-                    </div>
-                    <div class="column one-second">
-                      地址：
-                    </div>
-                    <div class="column one-second">
-                      XXXXXXX
-                    </div>
-                  </form>
+                "
+              >
+                <h4>XXXX联系方式</h4>
+                <div id="contactWrapper">
+                  <div id="contactform">
+                    <form method="post" id="reused_form">
+                      <div class="column one-second">邮箱：</div>
+                      <div class="column one-second">shopeefy36@gmail.com</div>
+                      <div class="column one-second">电话：</div>
+                      <div class="column one-second">+86 07906863655</div>
+                      <div class="column one-second">工作时间：</div>
+                      <div class="column one-second">XXXXXXX</div>
+                      <div class="column one-second">地址：</div>
+                      <div class="column one-second">XXXXXXX</div>
+                    </form>
+                  </div>
                 </div>
-              </div>
-              <!-- <h4>
+                <!-- <h4>
                 XXXX联系方式
               </h4>
               <div id="contactWrapper">
@@ -618,7 +619,7 @@
               </div>
             </div>
           </div>
-      </div>
+        </div>
       </div>
       <footer id="Footer" class="clearfix">
         <div class="container">
