--- a/index-shopassistant.html
+++ b/index-shopassistant.html
@@ -60,16 +60,16 @@
                   <nav id="menu">
                     <ul id="menu-main-menu" class="menu menu-main">
                       <li class="current-menu-item">
-                        <a href="index-shopassistant.html"><span>Home</span></a>
+                        <a href="index-shopassistant.html"><span>首页</span></a>
                       </li>
                       <li>
-                        <a href="content/shopassistant/about.html"><span>About us</span></a>
+                        <a href="content/shopassistant/about.html"><span>关于我们</span></a>
                       </li>
                       <li>
-                        <a href="content/shopassistant/services.html"><span>Services</span></a>
+                        <a href="content/shopassistant/services.html"><span>企业文化</span></a>
                       </li>
                       <li>
-                        <a href="content/shopassistant/pricing.html"><span>Pricing</span></a>
+                        <a href="content/shopassistant/pricing.html"><span>员工风采</span></a>
                       </li>
                       <li>
                         <a href="content/shopassistant/blog.html"><span>Blog</span></a>
@@ -100,8 +100,7 @@
             </div>
           </div>
         </div>
-        <div class="mfn-main-slider mfn-rev-slider">
-          <!-- START Home ShopAssistant REVOLUTION SLIDER 6.5.11 -->
+        <!-- <div class="mfn-main-slider mfn-rev-slider">
           <p class="rs-p-wp-fix"></p>
           <rs-module-wrap id="rev_slider_1_1_wrapper" data-source="gallery" style="
                 visibility: hidden;
@@ -119,15 +118,13 @@
                     class="rev-slidebg tp-rs-img rs-lazyload"
                     data-lazyload="content/shopassistant/images/transparent.png" data-bg="p:left center;f:auto;"
                     data-parallax="off" />
-                  <!--
-										-->
                   <rs-layer id="slider-1-slide-1-layer-0" data-type="text" data-color="#12263a" data-rsp_ch="on"
                     data-xy="x:l,l,c,c;xo:80px,80px,0,80px;yo:179px,179px,510px,510px;"
                     data-text="w:normal;s:60;l:80,80,85,85;fw:600;a:left,left,center,center;"
                     data-dim="w:580px,580px,470px,470px;" data-frame_0="y:-50,-50,-28,-28;" data-frame_1="sp:1000;"
                     data-frame_999="o:0;st:w;" style="z-index: 13; font-family: 'Inter'">
-                    <span lang="kua">跨境无界</span><br /><span lang="wuxian">商机无限</span><br />
-                    <span style="color: #ffcf00">世界触手可及</span>
+                    <span lang="home_index_first">跨境无界</span><br /><span lang="home_index_second">商机无限</span><br />
+                    <span style="color: #ffcf00" lang="home_index_third">世界触手可及</span>
                   </rs-layer>
 
                   <rs-layer id="slider-1-slide-1-layer-5" data-type="image" data-rsp_ch="on"
@@ -144,8 +141,9 @@
                     data-text="w:normal;s:16,16,9,9;l:26,26,14,14;" data-dim="w:420px,420px,243px,243px;"
                     data-vbility="t,t,f,t" data-frame_0="y:-50,-50,-28,-28;" data-frame_1="sp:1000;"
                     data-frame_999="o:0;st:w;" style="z-index: 14; font-family: 'Inter'">
-                    我们拥有丰富的产品线、强大的供应链能力和完善的物流体系，致力于打造高效、便捷的全球电子商务体验，助力您开拓无限商机。
-                  </rs-layer>
+                    <span lang="home_index_fourth">我们拥有丰富的产品线、强大的供应链能力和完善的物流体系，致力于打造高效、便捷的全球电子商务体验，助力您开拓无限商机。
+                    </span>
+                    </rs-layer>
                   <a id="slider-1-slide-1-layer-7" class="rs-layer rev-btn" href="#" target="_self" data-type="button"
                     data-rsp_ch="on" data-xy="x:l,l,c,c;xo:80px,80px,0,80px;yo:560px,560px,786px,786px;"
                     data-text="w:normal;s:16,16,24,24;l:32,32,34,34;fw:700;" data-dim="minh:0px,0px,none,0px;"
@@ -175,17 +173,53 @@
                       class="tp-rs-img rs-lazyload" width="245" height="267"
                       data-lazyload="content/shopassistant/images/shopassistant-slider-pic7.webp" />
                   </rs-layer>
-                  <!--
-										-->
                 </rs-slide>
               </rs-slides>
             </rs-module>
           </rs-module-wrap>
-          <!-- END REVOLUTION SLIDER -->
-        </div>
+        </div> -->
       </header>
     </div>
     <div id="Content">
+      <div
+          class="section no-margin-h no-margin-v full-width wrap-reverse bg-contain"
+        >
+          <div class="row">
+            <div class="col-md-2" data-col="one-sixth">
+              <div class="placeholder">&nbsp;</div>
+            </div>
+            <div
+              class="col-md-4"
+              data-col="one-third"
+              style="padding-right: 11%; padding-top: 120px;"
+            >
+              <div class="mobile_align_center">
+                <hr class="no_line" style="margin: 0 auto 10px auto" />
+                <p class="home-title">
+                  跨境无界
+                </p>
+                <p class="home-title">
+                  商机无限
+                </p>
+                <p class="home-title-themecolor">世界触手可及</p>
+                <p class="home-title-describe">我们拥有丰富的产品线、强大的供应链能力和完善的物流体系，致力于打造高效、便捷的全球电子商务体验，助力您开拓无限商机。</p>
+                <br/>
+                <a href="#" class="home-title-button">
+                  联系我们
+                </a>
+              </div>
+            </div>
+            <div class="col-md-6" data-col="one-second">
+              <img src="content/shopassistant/images/home-people.png" alt="" />
+            </div>
+          </div>
+          <div class="home-decorate-one">
+            <img src="content/shopassistant/images/shopassistant-slider-pic7.webp" alt="" />
+          </div>
+          <div class="home-decorate-two">
+            <img src="content/shopassistant/images/shopassistant-slider-pic6.webp" alt="" />
+          </div>
+        </div>
       <div class="section mcb-section bg-contain" style="
             background-image: url(content/shopassistant/images/shopassistant-section-bg1.svg);
             background-repeat: no-repeat;
