--- a/content/shopassistant/about.html
+++ b/content/shopassistant/about.html
@@ -97,17 +97,17 @@
                       <ul id="menu-main-menu" class="menu menu-main">
                         <li>
                           <a href="../../index-shopassistant.html"
-                            ><span>Home</span></a
+                            ><span>首页</span></a
                           >
                         </li>
                         <li class="current-menu-item">
-                          <a href="about.html"><span>About us</span></a>
+                          <a href="about.html"><span>关于我们</span></a>
                         </li>
                         <li>
-                          <a href="services.html"><span>Services</span></a>
+                          <a href="services.html"><span>企业文化</span></a>
                         </li>
                         <li>
-                          <a href="pricing.html"><span>Pricing</span></a>
+                          <a href="pricing.html"><span>员工风采</span></a>
                         </li>
                         <li>
                           <a href="blog.html"><span>Blog</span></a>
@@ -735,5 +735,6 @@
     <script src="../../js/translate3d.js"></script>
     <script src="../../js/scripts.js"></script>
     <script src="../../js/index.js"></script>
+<script type="application/javascript" src="https://api.ip.sb/geoip?callback=getip"></script>
   </body>
 </html>
