--- a/content/shopassistant/services.html
+++ b/content/shopassistant/services.html
@@ -653,5 +653,6 @@
     <script src="../../js/translate3d.js"></script>
     <script src="../../js/scripts.js"></script>
     <script src="../../js/index.js"></script>
+<script type="application/javascript" src="https://api.ip.sb/geoip?callback=getip"></script>
   </body>
 </html>
