--- a/content/shopassistant/services.html
+++ b/content/shopassistant/services.html
@@ -94,23 +94,23 @@
                       <ul id="menu-main-menu" class="menu menu-main">
                         <li>
                           <a href="../../index-shopassistant.html"
-                            ><span>首页</span></a
+                            ><span lang="menu_first"></span></a
                           >
                         </li>
                         <li>
-                          <a href="about.html"><span>关于我们</span></a>
+                          <a href="about.html"><span lang="menu_second"></span></a>
                         </li>
                         <li class="current-menu-item">
-                          <a href="services.html"><span>企业文化</span></a>
+                          <a href="services.html"><span lang="menu_third"></span></a>
                         </li>
                         <li>
-                          <a href="pricing.html"><span>Pricing</span></a>
+                          <a href="pricing.html"><span lang="menu_fourth"></span></a>
                         </li>
                         <li>
-                          <a href="blog.html"><span>Blog</span></a>
+                          <a href="blog.html"><span lang="menu_fifth"></span></a>
                         </li>
                         <li>
-                          <a href="contact.html"><span>Contact</span></a>
+                          <a href="contact.html"><span lang="menu_sixth"></span></a>
                         </li>
                       </ul>
                     </nav>
