--- a/content/shopassistant/contact.html
+++ b/content/shopassistant/contact.html
@@ -45,8 +45,8 @@
 											<li> <a href="about.html"><span>About us</span></a> </li>
 											<li> <a href="services.html"><span>Services</span></a> </li>
 											<li> <a href="pricing.html"><span>Pricing</span></a> </li>
-											<li> <a href="blog.html"><span>Blog</span></a> </li>
-											<li class="current-menu-item"> <a href="contact.html"><span>Contact</span></a> </li>
+											<li> <a href="blog.html"><span lang="menu_fifth"></span></a> </li>
+											<li class="current-menu-item"> <a href="contact.html"><span lang="menu_sixth"></span></a> </li>
 										</ul>
 									</nav><a class="responsive-menu-toggle " href="#" aria-label="Mobile menu"><i class="icon-menu-fine" aria-hidden="true"></i></a> </div>
 							</div>
